Modernize codebase cleanup: Remove dead code and debug prints